[project]
name = "droplet-impact-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imagecodecs>=2025.3.30",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
]

[project.scripts]
droplet-impact-cv = "droplet_impact_cv.analyze:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["droplet_impact_cv*"]
